# XDrift-Analyzer

./: CONTRIBUTING.md  LICENSE  README.md  X-Drift-Analyzer V2.md  demo.py  pyproject.toml  requirementes.txt  setup.py
docs/: why_base_adapter.md
examples/: __init__.py  adapter_pattern_demo.py  advanced_example.py  advanced_metrics_example.py  basic_example.py  drift_notebook.ipynb  example_notebook.ipynb  example_notebook_bkp.ipynb  multi_framework_drift_analysis.py  multi_library_drift_comparison.ipynb
tests/: test_base.py  test_sklearn_adapter.py
xadapt_drift/: __init__.py  cli.py
xadapt_drift/adapters/: __init__.py  base.py  sklearn_adapter.py
xadapt_drift/drift/: __init__.py  characterizer.py  detector.py
xadapt_drift/impact/: __init__.py  analyzer.py
xadapt_drift/report/: __init__.py  generator.py
xadapt_drift/utils/: __init__.py  advanced_metrics.py  visualization.py
